--- a/app/src/main/res/menu/botton_menu.xml
+++ b/app/src/main/res/menu/botton_menu.xml
@@ -12,4 +12,8 @@
         android:title="Notificaciones"
         android:icon="@drawable/ic_baseline_notifications_24"/>
 
+    <item android:id="@+id/nav_calen"
+        android:title="Calendario"
+        android:icon="@drawable/ic_baseline_calendar_today_24"/>
+
 </menu>
